table.cc:   Bug #4558 Escape handling error for ENUM values in SJIS encoding